syntax = "proto3";
package msg;

option go_package = "./msg";

message StatusReqMessage { int64 time = 1; }

message CMDRunMessage {
  string cid = 1;     // command cid
  string payload = 2; // command payload
  bool sync = 3;      // sync run
}

message CMDKillMessage {
  string cid = 1; // command cid
}

message FileMessage {
  string path = 1;    // file save path
  bytes file = 2;     // file data
  bool recursive = 3; // recursive create
  bool override = 4;  // override path
  int32 perm = 5;     // permission
}
